--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+	"type": "module",
+	"scripts": {
+		"tsinit": "npx tsc --init",
+		"biomeInit": "npx biome init",
+		"build": "vite build"
+	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^22.15.30",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
@@ -10,6 +17,7 @@
 	},
 	"dependencies": {
 		"@linear/sdk": "^43.0.0",
-		"dotenv": "^16.5.0"
+		"dotenv": "^16.5.0",
+		"vite": "^6.3.5"
 	}
 }
