--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@linear/sdk": "^43.0.0",
+		"@notionhq/client": "^3.1.3",
 		"dotenv": "^16.5.0",
 		"vite": "^6.3.5"
 	}
