feat: update environment variables and enhance task migration logic
- Added NOTION_TEAM_NAME and LINEAR_PROJECT_ID to the environment template for better configuration.
- Implemented error handling for the new environment variables in the main function to ensure they are set before proceeding.
- Updated the createIssue method in LinearService to allow storyPoint to be optional, improving flexibility in issue creation.
- Enhanced logging to provide clearer feedback during task migration from Notion.

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 NOTION_API_KEY=NOTION_API_KEY
 NOTION_DATABASE_ID=NOTION_DATABASE_ID
+NOTION_TEAM_NAME=NOTION_TEAM_NAME
 LINEAR_API_KEY=LINEAR_API_KEY
 LINEAR_TEAM_ID=LINEAR_TEAM_ID
+LINEAR_PROJECT_ID=LINEAR_PROJECT_ID
